fix(card): sold out overflow bug fixed

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -72,6 +72,7 @@
       transform-style: preserve-3d;
       //cursor: pointer;
       position: relative;
+      overflow: visible !important;
     }
     .flip-card.is-flipped {
       transform: rotateY(180deg);
@@ -86,6 +87,7 @@
       box-shadow: 0rem .2rem .5rem $primaryShadow;
       text-align: left;
       margin: 1rem;
+      overflow: hidden;
       .card-face{
         position: absolute;
         width: 100%;
@@ -97,8 +99,7 @@
         object-fit: cover; 
         .card-img {
           border-radius: 1rem;
-          min-height: 100%;
-          max-height: 100%;
+          height: 100%;
           object-fit: cover; 
 
         }
